--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *Must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Home | Aurang</title>
+    <title>Home </title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
